<resources>
    <string name="app_name">Generator bar koda naloga</string>
    <string name="action_settings">Postavke</string>

    <string name="payer_name">Ime i prezime platitelja</string>
    <string name="payer_address_1">Adresa platitelja (ulica i broj)</string>
    <string name="payer_address_2">Adresa platitelja (poštanski broj i mjesto)</string>
    <string name="amount">Iznos</string>
    <string name="model">Model</string>
    <string name="reference_number">Poziv na broj</string>
    <string name="description_of_payment">Opis plaćanja</string>

    <string name="default_amount">00.00</string>
    <string name="default_model">HR00</string>

    <string name="title_activity_settings">Postavke</string>

    <!-- Strings related to Settings -->

    <!-- Recipient data settings -->
    <string name="pref_header_recipient">Podaci primatelja</string>

    <string name="pref_title_recipient_name">Ime i prezime primatelja</string>
    <string name="pref_title_recipient_address_1">Adresa primatelja (ulica i broj)</string>
    <string name="pref_title_recipient_address_2">Adresa primatelja (poštanski broj i mjesto)</string>
    <string name="pref_title_recipient_iban">IBAN ili račun primatelja</string>

    <string name="pref_default_recipient_name">Pero Perić</string>
    <string name="pref_default_recipient_address_1">Ulica Josipa Lončara</string>
    <string name="pref_default_recipient_address_2">31415 Winterfell</string>
    <string name="pref_default_recipient_iban">HR1210010051863000160</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="share">Pošalji</string>
    <string name="external_storage_permission_error">Molim Vas dajte aplikaciji prava za pisanje u eksterni direktorij</string>
</resources>
