<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_recipient_name"
        android:inputType="textCapWords"
        android:key="pref_recipient_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_recipient_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_recipient_address_1"
        android:inputType="text"
        android:key="pref_recipient_address_1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_recipient_address_1" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_recipient_address_2"
        android:inputType="text"
        android:key="pref_recipient_address_2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_recipient_address_2" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_recipient_iban"
        android:inputType="text"
        android:key="pref_recipient_iban"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_recipient_iban" />

</PreferenceScreen>
